--- a/movie_land/pubspec.yaml
+++ b/movie_land/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.5.3
+  provider: ^6.1.5+1
+  http: ^1.5.0
+  flutter_dotenv: ^6.0.0
+  infinite_scroll_pagination: ^5.1.1
+  go_router: ^16.2.4
+  get: ^4.7.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
