--- a/movie_land/pubspec.yaml
+++ b/movie_land/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   percent_indicator: ^4.2.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
